# crosspoint-aurora

./: CLAUDE.md  README.md  discovered_pins.md  platformio.ini
docs/: OPTIMIZATION_NOTES.md
lib/EmuNet/src/: emu_net.cpp  emu_net.h  esp_eth_mac_openeth.c  esp_eth_phy_dp83848.c
lib/EpdFont/: SdCardFontManager.cpp  SdCardFontRegistry.cpp  SdCardFontRegistry.h
lib/EpdFont/builtinFonts/: all.h  ebgaramond_10_bold.h  ebgaramond_10_regular.h  ebgaramond_12_bold.h  ebgaramond_12_regular.h  notosansui_10_bold.h  notosansui_10_regular.h  notosansui_12_bold.h  notosansui_12_regular.h  sfugoudy_10_bold.h  sfugoudy_10_regular.h  sfugoudy_12_bold.h  sfugoudy_12_regular.h  ubuntu_10_bold.h  ubuntu_10_regular.h  ubuntu_12_bold.h  ubuntu_12_regular.h
lib/EpdFont/builtinFonts/source/: .gitignore
lib/EpdFont/scripts/: convert-builtin-fonts.sh
lib/Epub/: Epub.cpp
lib/Epub/Epub/: ParsedText.cpp  ParsedText.h  Section.cpp  Section.h
lib/Epub/Epub/blocks/: TextBlock.cpp  TextBlock.h
lib/Epub/Epub/hyphenation/: LanguageRegistry.cpp
lib/Epub/Epub/parsers/: ChapterHtmlSlimParser.cpp  ChapterHtmlSlimParser.h
lib/GfxRenderer/: GfxRenderer.cpp  GfxRenderer.h
lib/I18n/: I18nKeys.h
lib/I18n/translations/: belarusian.yaml  catalan.yaml  czech.yaml  danish.yaml  dutch.yaml  english.yaml  finnish.yaml  french.yaml  german.yaml  hebrew.yaml  hungarian.yaml  italian.yaml  kazakh.yaml  lithuanian.yaml  polish.yaml  portuguese.yaml  romanian.yaml  russian.yaml  slovak.yaml  slovenian.yaml  spanish.yaml  swedish.yaml  turkish.yaml  ukrainian.yaml  valencian.yaml  vietnamese.yaml
lib/Utf8/: Utf8.cpp  Utf8.h  Utf8ComposeTable.h
lib/hal/: HalGPIO.cpp  HalGPIO.h
rust-port/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
rust-port/.cargo/: config.toml
rust-port/core/: Cargo.toml
rust-port/core/src/: battery.rs  glyphfont.rs  input.rs  lib.rs  pins.rs
rust-port/core/src/archive/: mod.rs  zip.rs
rust-port/core/src/compress/: inflate.rs  mod.rs
rust-port/core/src/driver/: eink.rs  mod.rs
rust-port/core/src/layout/: mod.rs
rust-port/core/src/parser/: font.rs  html.rs  mod.rs  text.rs
rust-port/core/src/ui/: aurora_home.rs  home.rs  menu.rs  mod.rs  reader.rs  settings.rs
rust-port/firmware/: Cargo.toml
rust-port/firmware/src/: app.rs  detect.rs  main.rs  power.rs  sd.rs  time_driver.rs  wifi.rs
src/: CrossPointSettings.h  JsonSettingsIO.cpp  RecentBooksStore.cpp  RecentBooksStore.h  SdCardFontSystem.cpp  SdCardFontSystem.h  SettingsList.h  SystemFont.h  main.cpp
src/activities/: ActivityManager.cpp  ActivityManager.h
src/activities/boot_sleep/: BootActivity.cpp
src/activities/home/: FileBrowserActivity.cpp  FileBrowserActivity.h  HomeActivity.cpp  HomeActivity.h
src/activities/network/: CrossPointWebServerActivity.cpp  NetworkModeSelectionActivity.cpp  WifiSelectionActivity.cpp
src/activities/reader/: EpubReaderActivity.cpp  EpubReaderActivity.h  EpubReaderFootnotesActivity.cpp  EpubReaderTextActivity.cpp  EpubReaderTextActivity.h
src/activities/settings/: ClearCacheActivity.cpp  ClockOffsetActivity.cpp  ClockSyncActivity.cpp  DropCapFontSelectionActivity.cpp  DropCapFontSelectionActivity.h  FontDownloadActivity.cpp  FontSelectionActivity.cpp  KOReaderAuthActivity.cpp  KOReaderSettingsActivity.cpp  LanguageSelectActivity.cpp  OpdsServerListActivity.cpp  OpdsSettingsActivity.cpp  OtaUpdateActivity.cpp  SdFirmwareUpdateActivity.cpp  SettingsActivity.cpp  SettingsActivity.h  StatusBarSettingsActivity.cpp
src/activities/util/: ConfirmationActivity.cpp  ConfirmationActivity.h  ContextMenuActivity.cpp  ContextMenuActivity.h  HomeTabBar.cpp  HomeTabBar.h
src/components/: UITheme.cpp
src/components/themes/: BaseTheme.cpp  BaseTheme.h
src/components/themes/aurora/: AuroraTheme.cpp  AuroraTheme.h
