[package]
name = "crosspoint-fw"
version = "0.1.0"
edition = "2021"
description = "CrossPoint e-reader firmware — ESP32-C3 binary (Xteink X4/X3)"
license = "MIT"

[[bin]]
name = "crosspoint-fw"
path = "src/main.rs"

[dependencies]
crosspoint-core = { path = "../core" }

# ── Wi-Fi-enabled variant (rust-wifi branch) ─────────────────────────────────
# Including Wi-Fi forces relaxing BOTH Step 2 ("stable esp-hal") and Step 3
# ("no global allocator"): the only Wi-Fi stack, esp-wifi, (1) needs a global
# allocator and (2) only compiles on a PRE-RELEASE esp-hal (it uses beta-era
# internals removed in stable — esp-hal 1.1.1 gives 27 errors). So this variant
# pins esp-hal 1.0.0-rc.0 + esp-hal-embassy + esp-alloc + esp-wifi. The `rust`
# branch keeps stable+zero-alloc and everything except Wi-Fi. App data stays
# zero-alloc — the heap is only for esp-wifi's internal use.
esp-hal = { version = "=1.0.0-beta.0", features = ["esp32c3", "unstable"] }
esp-alloc = "0.7"
esp-wifi = { version = "=0.13.0", features = ["esp32c3", "wifi"] }
esp-backtrace = { version = "=0.15.0", features = ["esp32c3", "panic-handler", "println"] }
esp-println = { version = "=0.13.0", features = ["esp32c3", "auto"] }

# embassy via our own time driver: esp-hal-embassy that pairs with beta.0 wants a
# different esp-hal than esp-wifi does, so we reuse the stable branch's custom
# 1 ms SystemTimer driver instead.
embassy-executor = { version = "0.7", features = [
    "arch-riscv32",
    "executor-thread",
    "task-arena-size-65536",
] }
embassy-time = { version = "0.4", features = ["tick-hz-1_000"] }
embassy-time-driver = "0.2"
embassy-time-queue-utils = "0.1"
critical-section = "1"
static_cell = "2"

embedded-graphics = "0.8"
embedded-hal = "1.0"
embedded-hal-bus = "0.3"
embedded-sdmmc = { version = "0.9", default-features = false }
heapless = "0.8"
